gitea/base/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: gitea
  name: gitea-service
  namespace: gitea
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
    name: web
    nodePort: 30082
  - port: 22
    targetPort: 22    
    name: ssh
  selector:
    app: gitea
  
# status:
#   loadBalancer:
#     ingress:
#     - hostname: localhost
