gitea/base/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitea-ingress
  namespace: gitea
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx #this line is important!
spec:
  rules:
  - host: kubernetes.docker.internal
    http:
      paths:
      - path: /gitea
        pathType: Prefix
        backend:
          service:
            name: gitea-service
            port:
              number: 80
